[gd_scene load_steps=13 format=3 uid="uid://bqscg1kjp8p7"]

[ext_resource type="Script" path="res://scenes/test_world_multiplayer.gd" id="1_sv4t1"]
[ext_resource type="PackedScene" uid="uid://q7llm5mr03ct" path="res://scenes/test_environment.tscn" id="2_vxtl0"]
[ext_resource type="Texture2D" uid="uid://cfstfe3pcfcnr" path="res://addons/kenney_particle_pack/circle_05.png" id="3_8gaq5"]
[ext_resource type="PackedScene" uid="uid://by0mye1dj10gn" path="res://scenes/loot_box.tscn" id="4_0fvr2"]
[ext_resource type="PackedScene" uid="uid://c4q7skpmltk8l" path="res://scenes/main_menu.tscn" id="4_70cj1"]
[ext_resource type="PackedScene" uid="uid://bjjw42kgy7uax" path="res://scenes/hud.tscn" id="5_0mt8n"]
[ext_resource type="Resource" uid="uid://c8fxpau6c47ak" path="res://resources/items/speed_boost.tres" id="5_3qtad"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cbq6g"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_c8opc"]
sky_material = SubResource("ProceduralSkyMaterial_cbq6g")

[sub_resource type="Environment" id="Environment_h1gcq"]
background_mode = 2
sky = SubResource("Sky_c8opc")
tonemap_mode = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kco21"]
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_7lfqm"]
Label/styles/normal = SubResource("StyleBoxFlat_kco21")

[node name="Test World Multiplayer" type="Node"]
script = ExtResource("1_sv4t1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h1gcq")

[node name="Test Environment" parent="." instance=ExtResource("2_vxtl0")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -1.7389, -2.00995, -3.34783)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("5_0mt8n")]
mouse_filter = 2

[node name="HUD old" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshairs" type="TextureRect" parent="CanvasLayer/HUD old"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(640, 360)
texture = ExtResource("3_8gaq5")
stretch_mode = 5

[node name="ItemListLabel" type="Label" parent="CanvasLayer/HUD old"]
layout_mode = 0
offset_left = 43.0
offset_top = 592.0
offset_right = 195.0
offset_bottom = 667.0
theme = SubResource("Theme_7lfqm")

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("4_70cj1")]

[node name="LootBox" parent="." instance=ExtResource("4_0fvr2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.3378, 0.5, -2.49323)
item = ExtResource("5_3qtad")

[node name="LootBox2" parent="." instance=ExtResource("4_0fvr2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.3378, 0.5, 4.04229)
item = ExtResource("5_3qtad")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[connection signal="host_button_pressed" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_host_button_pressed"]
[connection signal="join_button_pressed" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_join_button_pressed"]
